[gd_scene load_steps=4 format=3 uid="uid://uqyu0okxhgq1"]

[ext_resource type="PackedScene" uid="uid://4obrxlux0vjs" path="res://scenes/ui/objects/button.tscn" id="1_1c3wb"]
[ext_resource type="Script" path="res://scripts/ui_specific/level_type_select.gd" id="1_3yijo"]
[ext_resource type="PackedScene" uid="uid://jiwlsylovbqv" path="res://scenes/ui/objects/small_button.tscn" id="2_c8807"]

[node name="Margin" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6
script = ExtResource("1_3yijo")

[node name="VB" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Header" type="Label" parent="VB"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.552941, 0.215686, 0.294118, 1)
theme_override_constants/outline_size = 3
theme_override_constants/shadow_outline_size = 3
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 16
text = "CHOOSE LEVEL TYPE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VB" type="VBoxContainer" parent="VB"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="Margin" type="MarginContainer" parent="VB/VB"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="LevelTypes" type="VBoxContainer" parent="VB/VB/Margin"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="Dashing" parent="VB/VB/Margin/LevelTypes" instance=ExtResource("1_1c3wb")]
layout_mode = 2
text = "DASHING"

[node name="Freeroam" parent="VB/VB/Margin/LevelTypes" instance=ExtResource("1_1c3wb")]
layout_mode = 2
text = "FREE ROAM"

[node name="MainMenu" parent="VB" instance=ExtResource("2_c8807")]
layout_mode = 2
size_flags_horizontal = 4
text = "MAIN MENU"

[connection signal="pressed" from="VB/VB/Margin/LevelTypes/Dashing" to="." method="select_dashing_level"]
[connection signal="pressed" from="VB/VB/Margin/LevelTypes/Freeroam" to="." method="select_freeroam_level"]
[connection signal="pressed" from="VB/MainMenu" to="." method="on_main_menu_pressed"]
